trunk/test/T2/Pass/T2_ifElse.ic
class Test{
	int a(int n){
		if (n >= 10)
		{
			return 1;
		}
		else 
		{
			return 0;
		}
	}
}
