trunk/test/T2/Fail/T2_noClassDec.ic
Fail {
	int a(){
		return 1;
	}
}